--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,12 @@
-<div id = "wrapper">
-    <h1>News-Scrape</h1>
-    <div id="articles"></div>
-    <div id ="notes"></div>
+<div id="wrapper">
+    <div class="row">
+    <div class="col-md-6" id="articles">
+        {{ articles}}
+
+    </div>
+    <div class="col-md-6" id="notes">
+
+        {{ notes }}
+    </div>
+    </div>
 </div>
