--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>News Scraper</title>
+    <title>Vice Scraper</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
-    {{body}}
-<script src="https://cdnjs.cloudflase.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="../../public/app.js"></script>
+    <div class="page-header">
+        <div class="row">
+            <h1>Vice Scraper</h1>
+        </div>
+        <div class="row">
+            <a href='/scrape'>
+                <button> Scrape Vice</button>
+            </a>
+            <a href="/saved">
+                <button> Saved Articles</button>
+            </a>
+        </div>
+    </div>
+    {{{body}}}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="/app.js"></script>
 </body>
+
 </html>
