--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,12 +1,17 @@
 {{#each articles}} {{#if this.saved}}
 <div id="wrapper">
     <div class="row">
-        <div class="col-md-6" id="articles">
+        <div class="col-md-6">
+            <h2> {{ this.title}} </h2>
+            <br>
+            <p> {{ this.summary}}</p>
+            <br>
+            <p> {{this.link}}</p>
 
 
         </div>
-        <div class="col-md-6" id="notes">
-
+        <div class="col-md-6">
+            
 
         </div>
     </div>
