--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,20 +9,24 @@
     <link rel="icon" href="/023_035_scraper_tool-512.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Carter+One|Domine" rel="stylesheet">
+
     <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
     <div class="page-header">
         <div class="row">
-            <h1>Vice Scraper</h1>
+            <a href="/">
+                <h1>Vice Scraper</h1>
+            </a>
         </div>
         <div class="row">
             <a href='/scrape'>
-                <button> Scrape Vice</button>
+               Scrape Vice
             </a>
             <a href="/saved">
-                <button> Saved Articles</button>
+                Saved Articles
             </a>
         </div>
     </div>
