--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,21 +1,26 @@
 <div id="wrapper">
     {{#each articles}}
     <div class="row">
-        <div class="col-md-6 col-sm-6 col-xs-6" id="artDiv">
+        <div class="col-lg-11 col-md-11 col-sm-11 col-xs-11" id="artDiv">
             <h2> {{ this.title}} </h2>
             <br>
-          
+
             <br>
-            <p>{{this.summary}}</p>
+            <p>{{ this.summary}}</p>
             <br>
-            
+
             <br>
             <p>{{this.link}}</p>
             <br>
-            <button  type="button" class="btn btn-success" data-id={{this._id}} id="saveArticle" saved={{this.saved}}>Save Article</button>
-            <button  type="button" class="btn btn-info" id='artNote' data-id={{this._id}}> View Article Note </button>
-        </div>
-        <div class="col-md-5 col-sm-5 col-xs-5"id="notes">
+            <a href='/saved'>
+                <button type="button" class="btn btn-danger" data-id={{this._id}} id="saveNote" saved={{this.saved}}>Save Article</button>
+            </a>
+            <button type="button" class="btn btn-info" id='artNote' data-id={{this._id}}> View Article Note </button>
+            <br>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="notes{{this._id}}">
+                </div>
+            </div>
         </div>
     </div>
     {{/each}}
