--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,7 +1,7 @@
 <div id="wrapper">
     {{#each articles}} {{#if this.saved}}
     <div class="row">
-        <div class="col-md-6 col-sm-6 col-xs-6" id="artDiv">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="artDiv">
             <h2> {{ this.title}} </h2>
             <br>
 
@@ -12,10 +12,15 @@
             <br>
             <p>{{this.link}}</p>
             <br>
-            <a href='/saved'><button type="button" class="btn btn-danger" data-id={{this._id}} id="delete" saved={{this.saved}}>Delete From Saved</button></a>
+            <a href='/saved'>
+                <button type="button" class="btn btn-danger" data-id={{this._id}} id="delete" saved={{this.saved}}>Delete From Saved</button>
+            </a>
             <button type="button" class="btn btn-info" id='artNote' data-id={{this._id}}> View Article Note </button>
-        </div>
-        <div class="col-md-5 col-sm-5 col-xs-5" id="notes">
+            <br>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="notes{{this._id}}">
+                </div>
+            </div>
         </div>
     </div>
     {{/if}} {{/each}}
