--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,9 +12,9 @@
             <br>
             <p>{{this.link}}</p>
             <br>
-            <a href='/'>
-                <button type="button" class="btn btn-danger" data-id={{this._id}} id="saveNote" saved={{this.saved}}>Save Article</button>
-            </a>
+
+            <button type="button" class="btn btn-danger" data-id={{this._id}} id="saveArticle" saved={{this.saved}}>Save Article</button>
+
             <button type="button" class="btn btn-info" id='artNote' data-id={{this._id}}> View Article Note </button>
             <br>
             <div class="row">
